# RLang

./: .gitignore  Cargo.toml  README.md  research_agentic_reasoning_patterns.md  rlang_spec.md
dataset/: QUALITY_REPORT.md  README.md  analyze.py  convert.py  convert_sample.py  download.py  export_training.py  optimize_traces.py  qaqc_review.py  quality_report.py  requirements.txt  validate_traces.py
dataset/expansion/: RLANG_CONVERSION_GUIDE.md  batch_state.py  download.py  export_dataset.py  push_to_hub.py  run_pipeline.py  verify.py
dataset/quality/: __init__.py  consistency_check.py  efficiency_check.py  run_all.py  self_correction_check.py  semantic_check.py  signal_check.py  structural_check.py
dictionary/: 01-language-overview.md  02-phases.md  03-operators-epistemic.md  04-operators-motivational.md  05-operators-operational.md  06-operators-communicative.md  07-types.md  08-metadata.md  09-connectives.md  10-evidence.md  11-anti-patterns.md  12-a2a-mapping.md  13-grammar.md  14-examples.md  README.md
examples/: deploy_decision.rl
research/: a2a_protocol_analysis.md  llm_reasoning_patterns.md  multi_agent_reasoning_patterns.md
src/: lib.rs  main.rs
src/ast/: common.rs  communicative.rs  connectives.rs  epistemic.rs  mod.rs  motivational.rs  operational.rs  phases.rs
src/errors/: diagnostic.rs  mod.rs
src/grammar/: mod.rs  rlang.pest
src/parser/: blocks.rs  (+5 more)
tests/: advanced_validator_tests.rs  ast_tests.rs  communicative_tests.rs  grammar_tests.rs  integration_tests.rs  parser_tests.rs  semantic_tests.rs  training_tests.rs  validator_tests.rs
(+47 files in other folders)
