[package]
name = "rlang"
version = "0.2.0"
edition = "2024"
description = "RLang: A Rust-Inspired Agentic Reasoning Language"
license = "Apache-2.0"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
